--- a/page.html
+++ b/page.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
+    <title>S3 Form</title>
 </head>
 <body>
     <form action="/save_to_s3" method="post">
-        <input type="text" name="subject" id="subject">
-        <textarea name="message" id="message" cols="30" rows="10"></textarea>
-        <input type="submit" value="Send">
+        <p>
+            <input type="text" name="subject" id="subject"><br/>
+        </p>
+        <p>
+            <textarea name="message" id="message" cols="30" rows="10"></textarea><br/>
+        </p>
+        <p>
+            <input type="submit" value="Send">
+        </p>
     </form>
 </body>
 </html>
